# age_guess

./: .commitlintrc.js  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  Readme.md  cleanup_heroku_apps.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  justfile  migrate.sh  pyproject.toml  requirements.txt  set_env_vars.sh
.github/workflows/: deploy.yml
main/: models.py  serializers.py  utils.py  views.py
main/tests/: test_utils.py  test_views.py
nginx/: nginx.conf
testproject/: settings.py  urls.py
